# bootmgr-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  HACKING.md  LICENSE  README.md  REUSE.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
bootmgr/: Cargo.toml  README.md
bootmgr-rs/: Cargo.toml
bootmgr-rs-basic/: Cargo.toml
bootmgr-rs-basic/src/: main.rs
bootmgr-rs-cli/: Cargo.toml  README.md
bootmgr-rs-cli/src/: main.rs
bootmgr-rs-core/: Cargo.toml  README.md
bootmgr-rs-core/src/: boot.rs  config.rs  error.rs  features.rs  lib.rs  system.rs
bootmgr-rs-core/src/boot/: action.rs  bli.rs  config.rs  devicetree.rs  loader.rs  secure_boot.rs
bootmgr-rs-core/src/boot/action/: firmware.rs  pxe.rs  reboot.rs  shutdown.rs
bootmgr-rs-core/src/boot/loader/: efi.rs  tftp.rs
bootmgr-rs-core/src/boot/secure_boot/: security_hooks.rs  security_override.rs  shim.rs
bootmgr-rs-core/src/config/: builder.rs  editor.rs  parsers.rs  types.rs
bootmgr-rs-core/src/config/editor/: persist.rs
bootmgr-rs-core/src/config/parsers/: bls.rs  fallback.rs  osx.rs  shell.rs  uki.rs  windows.rs
bootmgr-rs-core/src/config/parsers/windows/: windows_auto.rs  windows_bcd.rs
bootmgr-rs-core/src/system/: drivers.rs  fs.rs  global_allocator.rs  helper.rs  log_backend.rs  panic_handler.rs  protos.rs  time.rs  variable.rs
bootmgr-rs-minimal/: Cargo.toml  README.md
bootmgr-rs-minimal/src/: main.rs
bootmgr-rs-ratatui/: Cargo.toml  README.md
bootmgr-rs-ratatui/src/: app.rs  editor.rs  features.rs  main.rs  ui.rs
bootmgr-rs-ratatui/src/editor/: persist.rs  ui.rs  widget.rs
bootmgr-rs-ratatui/src/ui/: boot_list.rs  ratatui_backend.rs  theme.rs  widget.rs
bootmgr-rs-slint/: Cargo.toml  README.md  build.rs
bootmgr-rs-slint/src/: app.rs  editor.rs  input.rs  main.rs  ui.rs
bootmgr-rs-slint/src/app/: input.rs
bootmgr-rs-slint/src/ui/: slint_backend.rs  slint_inc.rs
bootmgr-rs-slint/ui/: boot_list.slint  card.slint  editor.slint  editor_field.slint  label.slint  main.slint  theme.slint  title_label.slint
bootmgr-rs-tests/: Cargo.toml  README.md
bootmgr-rs-tests/src/: action.rs  fs.rs  load.rs  main.rs  test_custom_action.rs  variables.rs
bootmgr-rs/src/: app.rs  config.rs  editor.rs  error.rs  features.rs  lib.rs  main.rs  ui.rs
bootmgr-rs/src/boot/: action.rs  config.rs  devicetree.rs  loader.rs  secure_boot.rs
bootmgr-rs/src/boot/action/: firmware.rs
bootmgr-rs/src/boot/loader/: efi.rs  tftp.rs
bootmgr-rs/src/boot/secure_boot/: security_hooks.rs  security_override.rs  shim.rs
bootmgr-rs/src/config/: builder.rs  types.rs
bootmgr-rs/src/config/parsers/: bls.rs  windows.rs
bootmgr-rs/src/editor/: ui.rs  widget.rs
bootmgr-rs/src/system/: drivers.rs  fs.rs  helper.rs  log_backend.rs  protos.rs  variable.rs
bootmgr-rs/src/ui/: boot_list.rs  ratatui_backend.rs
bootmgr/src/: boot.rs  config.rs  error.rs  features.rs
bootmgr/src/boot/: action.rs  bli.rs  config.rs  devicetree.rs  loader.rs  secure_boot.rs
bootmgr/src/boot/action/: firmware.rs  pxe.rs  reboot.rs
bootmgr/src/boot/loader/: efi.rs  tftp.rs
bootmgr/src/boot/secure_boot/: security_override.rs  shim.rs
bootmgr/src/config/: builder.rs  editor.rs  parsers.rs  types.rs
bootmgr/src/config/editor/: persist.rs
bootmgr/src/config/parsers/: bls.rs  fallback.rs  osx.rs  shell.rs  uki.rs  windows.rs
bootmgr/src/config/parsers/windows/: windows_auto.rs  windows_bcd.rs
bootmgr/src/system/: drivers.rs  fs.rs  global_allocator.rs  helper.rs  log_backend.rs  panic_handler.rs  protos.rs  time.rs  variable.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bls.rs  boot.rs  fuzz_bls_parser.rs  fuzz_boot_parser.rs  fuzz_uki_parser.rs  fuzz_win_parser.rs  uki.rs  win.rs
src/: app.rs  boot.rs  config.rs  editor.rs  error.rs  features.rs  lib.rs  main.rs  system.rs  ui.rs
src/boot/: action.rs  config.rs  devicetree.rs  loader.rs  mod.rs  secure_boot.rs
src/boot/action/: firmware.rs  mod.rs  pxe.rs  reboot.rs
src/boot/loader/: efi.rs  mod.rs  tftp.rs
src/boot/secure_boot/: security_override.rs  shim.rs
src/config/: builder.rs  parsers.rs  types.rs
src/config/parsers/: bls.rs  fallback.rs  osx.rs  shell.rs  uki.rs  windows.rs
src/editor/: ui.rs
src/parsers/: bls.rs  mod.rs  osx.rs  uki.rs  windows.rs
src/system/: drivers.rs  fs.rs  global_allocator.rs  helper.rs  log_backend.rs  mod.rs  panic_handler.rs  protos.rs  variable.rs
src/ui/: boot_list.rs  mod.rs  ratatui_backend.rs  theme.rs  widget.rs
xtask/: Cargo.toml
xtask/src/: build.rs  doc.rs  fuzz.rs  main.rs  run.rs  test.rs
