[workspace]
members = [
    "bootmgr-rs",
    "bootmgr-rs-tests",
    "fuzz",
    "xtask",
]
default-members = [
    "bootmgr-rs",
    "bootmgr-rs-tests",
]
resolver = "3"

[profile.release]
strip = true
opt-level = "z"
panic = "abort"

# fuzzing breaks completely when lto is enabled. so create a separate profile
# for non fuzzing release builds. this should be used by xtask build -r
[profile.release-lto]
inherits = "release"
lto = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
mod_module_files = "warn"
missing_docs_in_private_items = "warn"
