[workspace]
members = [
    "bootmgr-rs-core",
    "bootmgr-rs-minimal",
    "bootmgr-rs-ratatui",
    "bootmgr-rs-slint",
    "bootmgr-rs-tests",
    "fuzz",
    "xtask",
]
default-members = [
    "bootmgr-rs-core",
    "bootmgr-rs-minimal",
    "bootmgr-rs-ratatui",
    "bootmgr-rs-slint",
    "bootmgr-rs-tests",
]
resolver = "3"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

# fuzzing breaks completely when lto is enabled. so create a separate profile
# for non fuzzing release builds. this should be used by xtask build -r
[profile.release-lto]
inherits = "release"
lto = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = "warn"
mod_module_files = "deny"
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"
