# SPDX-FileCopyrightText: 2025 some100 <ootinnyoo@outlook.com>
# SPDX-License-Identifier: MIT

[workspace]
members = [
    "bootmgr",
    "bootmgr-rs-cli",
    "bootmgr-rs-minimal",
    "bootmgr-rs-ratatui",
    "bootmgr-rs-slint",
    "bootmgr-rs-tests",
    "fuzz",
    "xtask",
]
default-members = [
    "bootmgr",
    "bootmgr-rs-cli",
    "bootmgr-rs-minimal",
    "bootmgr-rs-ratatui",
    "bootmgr-rs-slint",
    "bootmgr-rs-tests",
]
resolver = "3"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

# fuzzing breaks completely when lto is enabled. so create a separate profile
# for non fuzzing release builds. this should be used by xtask build -r
[profile.release-lto]
inherits = "release"
lto = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unnecessary_safety_comment = "warn"
missing_docs_in_private_items = "warn"
redundant_type_annotations = "warn"
use_self = "warn"
mod_module_files = "deny"
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"
unwrap_used = "deny"
