[package]
name = "bootmgr-rs-basic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
bootmgr-rs-core = { version = "0.1.0", path = "../bootmgr-rs-core" }
log = "0.4.27"
uefi = { version = "0.35.0", features = ["alloc"] }

[lints]
workspace = true
