[package]
name = "bootmgr-rs-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", default-features = false }
bootmgr-rs-core = { path = "../bootmgr-rs-core" }
getargs = { version = "0.5.0", default-features = false }
log = { version = "0.4.27", default-features = false }
uefi = "0.35.0"

[lints]
workspace = true
