# SPDX-FileCopyrightText: 2025 some100 <ootinnyoo@outlook.com>
# SPDX-License-Identifier: MIT

[package]
name = "bootmgr-rs-cli"
version = "0.1.2"
edition = "2024"

[dependencies]
bootmgr = { path = "../bootmgr" }
getargs = { version = "0.5.0", default-features = false }
log = { version = "0.4.28", default-features = false }
uefi = "0.35.0"

[lints]
workspace = true
