[package]
name = "bootmgr-rs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
nt-hive = { version = "0.3.0", default-features = false, features = ["alloc"], optional = true }
object = { version = "0.37.1", default-features = false, features = ["pe", "read_core"], optional = true }
smallvec = "1.15.1"
thiserror = { version = "2.0.12", default-features = false }
uefi = { version = "0.35.0", features = ["alloc"] }

[features]
default = ["bls", "fallback", "osx", "pxe", "shell", "uki", "windows"]
bls = []
fallback = []
osx = []
pxe = []
shell = []
uki = ["dep:object"]
windows = ["dep:nt-hive"]

[lints]
workspace = true
