[package]
name = "bootmgr-rs-core"
version = "0.12.1"
rust-version = "1.88.0"
edition = "2024"
license = "MIT"
keywords = ["efi", "uefi", "boot"]
categories = ["embedded", "no-std"]
description = "A framework for easily creating boot managers in Rust"
repository = "https://github.com/some100/bootmgr-rs"

[dependencies]
log = "0.4.27"
nt-hive = { version = "0.3.0", default-features = false, features = ["alloc"], optional = true }
object = { version = "0.37.1", default-features = false, features = ["pe", "read_core"], optional = true }
thiserror = { version = "2.0.12", default-features = false }
tinyvec = { version = "1.9.0", features = ["alloc"] }
uefi = { version = "0.35.0", features = ["alloc"] }

[features]
default = ["all_parsers", "pxe"]
all_parsers = ["bls", "fallback", "osx", "shell", "uki", "windows"]
bls = []
fallback = []
osx = []
pxe = []
shell = []
uki = ["dep:object"]
windows = ["dep:nt-hive"]
global_allocator = []
panic_handler = []

[lints]
workspace = true

[dev-dependencies]
proptest = "1.7.0"
