# SPDX-FileCopyrightText: 2025 some100 <ootinnyoo@outlook.com>
# SPDX-License-Identifier: MIT

[package]
name = "bootmgr-rs-minimal"
version = "0.2.1"
license = "MIT"
edition = "2024"

[dependencies]
bootmgr-rs-core = { path = "../bootmgr-rs-core" }
log = "0.4.27"
uefi = "0.35.0"

[lints]
workspace = true
