[package]
name = "bootmgr-rs-ratatui"
version = "0.5.0"
edition = "2024"

[dependencies]
bootmgr-rs-core = { version = "0.2.0", path = "../bootmgr-rs-core"  }
log = "0.4.27"
postcard = { version = "1.1.3", optional = true, default-features = false, features = ["alloc"] }
ratatui-core = "0.1.0-alpha.6"
ratatui-widgets = "0.3.0-alpha.5"
serde = { version = "1.0.219", optional = true, default-features = false, features = ["alloc", "derive"] }
smallvec = "1.15.1"
thiserror = { version = "2.0.12", default-features = false }
uefi = "0.35.0"

[features]
default = ["editor"]
editor = ["dep:serde", "dep:postcard"]

[lints]
workspace = true
