# SPDX-FileCopyrightText: 2025 some100 <ootinnyoo@outlook.com>
# SPDX-License-Identifier: MIT

[package]
name = "bootmgr-rs-ratatui"
version = "0.5.2"
license = "MIT"
edition = "2024"

[dependencies]
bootmgr-rs-core = { path = "../bootmgr-rs-core" }
log = "0.4.27"
ratatui-core = "0.1.0-alpha.6"
ratatui-widgets = "0.3.0-alpha.5"
thiserror = { version = "2.0.12", default-features = false }
tinyvec = "1.9.0"
uefi = "0.35.0"

[features]
default = ["editor"]
editor = []

[lints]
workspace = true
