# SPDX-FileCopyrightText: 2025 some100 <ootinnyoo@outlook.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "bootmgr-rs-slint"
version = "0.10.0"
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
bootmgr = { path = "../bootmgr" }
bytemuck = "1.24.0"
heapless = "0.9.1"
log = "0.4.28"
slint = { version = "1.13.1", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
thiserror = { version = "2.0.17", default-features = false }
uefi = { version = "0.35.0", features = ["alloc"] }

[lints]
workspace = true

[build-dependencies]
slint-build = "1.13.1"
