# SPDX-FileCopyrightText: 2025 some100 <ootinnyoo@outlook.com>
# SPDX-License-Identifier: MIT

[package]
name = "bootmgr-rs-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
bootmgr = { path = "../bootmgr" }
log = "0.4.27"
uefi = "0.35.0"
