# SPDX-FileCopyrightText: 2025 some100 <ootinnyoo@outlook.com>
# SPDX-License-Identifier: MIT

[package]
name = "bootmgr"
version = "1.0.0"
rust-version = "1.88.0"
edition = "2024"
license = "MIT"
keywords = ["efi", "uefi", "boot"]
categories = ["embedded", "no-std"]
description = "A framework for easily creating boot managers in Rust"
repository = "https://github.com/some100/bootmgr-rs"

[dependencies]
bitflags = "2.9.4"
bytemuck = { version = "1.24.0", features = ["must_cast"] }
const_format = "0.2.35"
itoa = "1.0.15"
log = "0.4.28"
nanoserde = { version = "0.2.1", default-features = false, features = ["binary"] }
nt-hive = { version = "0.3.0", default-features = false, features = ["alloc"], optional = true }
object = { version = "0.37.3", default-features = false, features = ["pe", "read_core"], optional = true }
sha2 = { version = "0.10.9", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
tinyvec = { version = "1.10.0", features = ["alloc"] }
uefi = { version = "0.35.0", features = ["alloc"] }

[features]
default = ["all_parsers", "pxe"]
all_parsers = ["bls", "fallback", "osx", "shell", "uki", "windows"]
bls = []
fallback = []
osx = []
pxe = []
shell = []
uki = ["dep:object"]
windows = []
windows_bcd = ["dep:nt-hive"]
global_allocator = []
panic_handler = []

[lints]
workspace = true

[dev-dependencies]
proptest = "1.8.0"
