# SPDX-FileCopyrightText: 2025 some100 <ootinnyoo@outlook.com>
# SPDX-License-Identifier: MIT

[package]
name = "bootmgr-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.bootmgr-rs-core]
path = "../bootmgr-rs-core"
features = ["windows_bcd"]

[[bin]]
name = "bls"
path = "fuzz_targets/bls.rs"
test = false
doc = false
bench = false

[[bin]]
name = "uki"
path = "fuzz_targets/uki.rs"
test = false
doc = false
bench = false

[[bin]]
name = "win"
path = "fuzz_targets/win.rs"
test = false
doc = false
bench = false

[[bin]]
name = "boot"
path = "fuzz_targets/boot.rs"
test = false
doc = false
bench = false
